# TOOL_DA

./: .env.test  .gitignore  AGENTS.md  ARCHITECTURE.md  GEMINI.md  REQUIREMENTS.md  full_plan.md  main.py  pyproject.toml  test_database.py  verify_rss.py
.gtd/: CODEBASE.md  COMMIT_MSG.txt
.gtd/ai-service-implementation/: ROADMAP.md  SPEC.md
.gtd/ai-service-implementation/1/: PLAN.md  SUMMARY.md
.gtd/ai-service-implementation/2/: PLAN.md  RESEARCH.md  SUMMARY.md
.gtd/ai-service-implementation/3/: PLAN.md  RESEARCH.md  SUMMARY.md
.gtd/ai-service-implementation/4/: PLAN.md  RESEARCH.md  SUMMARY.md
.gtd/codebase/: architecture.md  entrypoints.md
.gtd/scripts/: generate-index.sh
scenarios/: SYS1-system-pushes-daily-briefing.md  SYS1-system-pushes-news-briefing.md  USER2-user-deep-dives-into-news.md  USER3-user-searches-for-any-news.md  USER4-user-manages-preferences.md
scripts/: test_briefing_service.py  test_i18n.py  test_messaging.py  test_observability.py  test_ollama_connection.py  test_storage.py  verify_prompts.py  verify_rss.py  verify_task_1.py  verify_task_4_1.py
src/: models.py
src/ai/: __init__.py  ai_service.py  exceptions.py  ollama_service.py  protocol.py
src/ai/providers/: __init__.py  (+3 more)
src/bot/: __init__.py  formatter.py  messenger.py  protocol.py  scheduler.py  telegram_handlers.py  telegram_messenger.py
src/core/: i18n.py
src/database/: __init__.py  protocol.py  sqlite_storage.py
src/news/: __init__.py  protocol.py  rss_crawler.py  sources.py
src/services/: __init__.py  agent_controller.py  briefing_service.py  protocol.py
(+5 files in other folders)
